# ChroGen-Report-App

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  setup.py
data/: face_skin_features.csv  ingredient_fingerprints.csv  lifestyle_questionnaire.csv  oral_epithelial_transcriptome.csv  oral_microbiome.csv  participants.csv  profile_39F.json  skin_genomic_variants.csv  skin_scRNA_pathway_scores.csv  target_mechanism_scores.csv
src/chronogene_39f_agent_ui.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/chronogene_agent/: cli.py  data_loader.py  features.py  mechanisms.py  model.py  report.py
tests/: test_basic.py
